--- a/C201.ipynb
+++ b/C201.ipynb
@@ -710,7 +710,9 @@
         "scores.std()\n",
         "\n",
         "# Si el puntaje es superior a 80% es un buen modelo\n",
-        "```"
+        "```\n",
+        "\n",
+        "Finalmente podemos generar un reporte de clasificación con `classification_report(y_test, y_pred)`."
       ],
       "metadata": {
         "id": "qNO0xPijPQcS"
