--- a/C201.ipynb
+++ b/C201.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -28,7 +27,7 @@
         "\n",
         "**Contenido**\n",
         "\n",
-        "* ¿Qué es el aprendizaje maquina?\n",
+        "* ¿Qué es el aprendizaje máquina?\n",
         "* ¿Por qué usar aprendizaje de máquina? \n",
         "* ¿Cómo aprenden las máquinas? \n",
         "* Tipos de aprendizaje\n",
@@ -266,7 +265,6 @@
         "\n",
         "Diseña un algoritmo inteligente para resolver el siguiente problema:\n",
         "\n",
-        "```\n",
         "En una fábrica alimenticia hay una banda donde son transportadas manzanas que son descargadas del Tambo A y llegan a tres posibles destinos:\n",
         "\n",
         "- El Tambo B1 que contendrá las manzanas rojas.\n",
@@ -288,7 +286,6 @@
         "Con lo que podemos determinar si el color es ROJO (R=1, G=0, B=0), VERDE (R=0, G=1, B=0) o AMARILLO (R=1, G=1, B=0)\n",
         "\n",
         "Se requiere un algoritmo que tome como entrada el color (R, G, B) y produzca como salida el ángulo -45°, 0° o +45° que recibirá la paleta.\n",
-        "```\n",
         "\n",
         "Escribe tu algoritmo en lenguaje natural, teniendo en cuenta instrucciones que si pueda realizar una máquina.\n",
         "\n",
@@ -556,7 +553,7 @@
         "id": "EZaEIJXECAOJ",
         "outputId": "5dc449ca-5b31-4209-b6bb-d4b84d3d558b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
