--- a/P201.ipynb
+++ b/P201.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Praáctica 201 - Flujo del Aprendizaje Automático\n",
+        "# Práctica 201 - Flujo del Aprendizaje Automático\n",
         "\n",
         "> Machine Learning\n",
         ">\n",
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -357,7 +357,7 @@
         "id": "DASZVumZ9k3b",
         "outputId": "e44ac2ab-0079-4383-87c3-87dadf7223cf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +541,7 @@
         "id": "OD-jgrAW-DzP",
         "outputId": "c127f243-6f98-478d-abb3-400211472c29"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +585,7 @@
         "id": "MtwXjJjn-JwL",
         "outputId": "393763de-ac1d-4fe7-b5df-41f7451bcb86"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
         "id": "YkzeIJeH-Z5-",
         "outputId": "83d14e7a-6894-4037-ab77-e67c3368a7fc"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
       "metadata": {
         "id": "nUreSxYD-vCt"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
         "id": "xefEfecU-6m7",
         "outputId": "2fe0213c-7f19-48a5-c41a-2a1c7adfb238"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
         "id": "qdKH8iXx_FC1",
         "outputId": "564840ff-b950-45d3-f8c7-ba005b00b91b"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -802,7 +802,7 @@
         "id": "L2PgiGRP_mWA",
         "outputId": "140cc603-e808-48a9-da07-179bdb8d5522"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -839,7 +839,7 @@
         "id": "3Nw5k_rr_7cC",
         "outputId": "ee069fd3-e3db-43d2-d7ab-007f03576e35"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
